--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.6",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.1",
     "brcypt": "^1.0.1",
